name:           Haskell-Book
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/Haskell-Book#readme>
homepage:       https://github.com/githubuser/Haskell-Book#readme
bug-reports:    https://github.com/githubuser/Haskell-Book/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/Haskell-Book

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
